policies/client-egress-l7-http-from-any.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-l7-http-from-any
spec:
  description: "Allow client to GET on echo"
  endpointSelector:
    matchLabels:
      app: netshoot-client
  egress:
  - toEndpoints:
    - matchLabels:
        app: netshoot-server
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/$"
